feat : Upgrade to spring boot 4 (#2236)
* feat : Upgrade to spring boot 4

* fix compilation issues

* review comments addressed

* fix issue with step scope value

* implement review comments

* fix : issue with compilation

* fix : cache collision